// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputPassword should render as a password field 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 fWHFgH"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="InputPassword"
        type="password"
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
    >
      <div
        class=""
      >
        <button
          class="flex items-center justify-center w-full h-full text-2xl focus:outline-none"
          data-testid="InputPassword__toggle"
          type="button"
        >
          <div
            class="sc-bdfBwQ fPrsah"
            height="1em"
            width="1em"
          >
            <svg>
              eye.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputPassword should render as a password isInvalid 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jFpSuY"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        aria-invalid="true"
        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="InputPassword"
        name="test"
        type="password"
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
    >
      <span
        data-errortext="Error message for password"
        data-testid="Input__error"
      >
        <div
          class="sc-bdfBwQ iyevwF text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </span>
      <div
        class="pl-3"
      >
        <button
          class="flex items-center justify-center w-full h-full text-2xl focus:outline-none"
          data-testid="InputPassword__toggle"
          type="button"
        >
          <div
            class="sc-bdfBwQ fPrsah"
            height="1em"
            width="1em"
          >
            <svg>
              eye.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
